bdr.BDR2.scala.error
Compilation error:
BDR2:8: error: ';' expected but ',' found.
  case l if l=="D" => forward();forward(),forward();forward()
                                         ^BDR2:10: error: ';' expected but ',' found.
  case l if l=="F" => forward();forward(),forward();forward();forward();forward();
                                         ^