bdr.BDR2.scala.code
letter match {
  case l if l=="R" => right(); forward();
  case l if l=="L" => left(); forward();
  case l if l=="I" => left();left();forward();
  case l if l=="A" => forward();
  case l if l=="B" => forward();forward();
  case l if l=="C" => forward();forward();forward();
  case l if l=="D" => forward();forward(),forward();forward()
  case l if l=="E" => forward();forward();forward();forward();forward();
  case l if l=="F" => forward();forward(),forward();forward();forward();forward();
  case l if l=="Z" => backward();
  case l if l=="Y" => backward();backward();
  case l if l=="X" => backward();backward();backward();
  case l if l=="W" => backward();backward();backward();backward();
  case l if l=="V" => backward();backward();backward();backward();backward();
  case l if l=="U" => backward();backward();backward();backward();backward();backward();
  
}